--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     
 
     <div class="gallery">
-      <button type="button" class="load-more">Load more</button>
+      <button type="button" class="load-more display-none">Load more</button>
     </div>
 
   </body>
