--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,15 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button type="submit" class="search-btn">Search</button>
     </form>
 
     
 
     <div class="gallery">
-      <button type="button" class="load-more display-none">Load more</button>
     </div>
+    <button type="button" class="load-more display-none">Load more</button>
+
 
   </body>
 </html>
